--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
     "lint": "eslint --ext .js,.vue src"
   },
   "dependencies": {
+    "axios": "^0.21.0",
     "bootstrap-vue": "^2.17.0",
+    "child_process": "^1.0.2",
+    "fs": "0.0.1-security",
     "vue": "^2.5.2",
     "vue-router": "^3.4.3",
     "vuex": "^3.5.1"
